[package]
name = "systrayx"
version = "0.4.1"
authors = ["Kyle Machulis <kyle@machul.is>", "Vurv78 <vurvdevelops@gmail.com>"]
description = "Rust library for making minimal cross-platform systray GUIs"
license = "BSD-3-Clause"
homepage = "https://github.com/Vurv78/systrayx"
repository = "https://github.com/Vurv78/systrayx.git"
readme = "README.md"
keywords = ["gui"]
edition = "2021"

[dependencies]
log = "0.4.8"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["shellapi", "libloaderapi", "errhandlingapi", "impl-default"] }
libc = "0.2.66"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.14.3"
glib = "0.14.8"
libappindicator = "0.6.1"

# [target.'cfg(target_os = "macos")'.dependencies]
# objc="*"
# cocoa="*"
# core-foundation="*"
